--- a/.github/workflows/on_pull_requests.yml
+++ b/.github/workflows/on_pull_requests.yml
@@ -61,18 +61,55 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  PublishToPypiDev:
-    runs-on: ubuntu-latest
+  PublishWheels:
+    name: Build and publish wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    needs:
+      - TestsUbuntu
+      - TestsMacos
+      - Style
+      - SonarCloud
+    strategy:
+      matrix:
+        os: [ ubuntu-20.04, macos-10.15 ]
+    steps:
+      - uses: actions/checkout@v2
+      - run: git submodule update --init
+      - run: make set-version
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.0.0a4
+        env:
+          CIBW_ARCHS: native
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - run: pip install twine==3.4.*
+      - name: Publish wheels to test pypi
+        env:
+          TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          TWINE_REPOSITORY_URL: https://test.pypi.org/legacy/
+        run: twine upload wheelhouse/*
+  PublishSdist:
+    name: Build and publish sdist
+    runs-on: ubuntu-20.04
     needs:
       - TestsUbuntu
       - TestsMacos
       - Style
       - SonarCloud
     steps:
-      - uses: actions/checkout@master
-      - name: build and publish to pypi
-        uses: ./.github/actions/pypi/
-        if: github.ref != 'refs/heads/master'
+      - uses: actions/checkout@v2
+      - run: git submodule update --init
+      - run: make set-version
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - run: python setup.py sdist
+      - run: pip install twine==3.4.*
+      - name: Publish package to test pypi
         env:
-          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
           TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          TWINE_REPOSITORY_URL: https://test.pypi.org/legacy/
+        run: twine upload dist/*
